<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_run"
        android:title="@string/menu_run"
        android:icon="@drawable/ic_run"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_stop"
        android:title="@string/menu_stop"
        android:icon="@drawable/ic_stop"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_files"
        android:title="@string/menu_files"
        android:icon="@drawable/ic_folder"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:title="@string/menu_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new"
        android:title="@string/menu_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_libraries"
        android:title="@string/menu_libraries"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pip"
        android:title="@string/menu_pip"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_text_larger"
        android:title="@string/menu_text_larger"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_text_smaller"
        android:title="@string/menu_text_smaller"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
